# cs560_webcrawler

./: .gitignore  README.md  SETUP_ENV.md  pyproject.toml  settings.py  setup.sh
tests/: test_spider.py
webcrawler/: main.py  response1.html  scrapy.cfg  zillow_crawler.db
webcrawler/tests/: conftest.py  test_spider.py
webcrawler/zillow_crawler/: items.py  middlewares.py  models.py  pipelines.py  settings.py  validation.py
webcrawler/zillow_crawler/spiders/: zillow_houses.py
zillow_crawler/: main.py  zillow_crawler.db
zillow_crawler/zillow_crawler/: items.py  models.py  pipelines.py  settings.py  validation.py
zillow_crawler/zillow_crawler/spiders/: books_toscrape.py  zillow_houses.py
