[tool.poetry]
name = "cs560-webcrawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
rich = "^13.7.0"
sqlalchemy = "^2.0.23"
structlog = "^23.2.0"
pydantic = "^2.5.2"
plotext = "^5.2.8"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
prospector = "^1.10.2"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
